--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   <!-- js -->
   <script src="public/js/jquery.js"></script>
   <script src="public/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
