--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
           </div>
           <div class="form-group">
             <label>Região: </label>
-            <input type="text" class="form-control">
+            <select id="cbLocation" class="form-control">
+              <option selected>...</option>
+            </select>
           </div>
         </div>
       </div>
@@ -60,12 +62,6 @@
       
     </form>
   </div>
-
-
-  <footer>
-    
-
-  </footer>
   <!-- js -->
   <script src="public/js/jquery.js"></script>
   <script src="public/js/bootstrap.min.js"></script>
