--- a/index.html
+++ b/index.html
@@ -4,113 +4,113 @@
 <head>
   <meta charset="utf-8">
   <title>Trabalho de Física</title>
-  <link rel="stylesheet" href="public/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
 
-
-
     <div class="container-fluid">
 
-      <div>
-        <div class="container" style="background-color: rgb(233, 233, 233);">
-          <h3 class="">Calculadora de Consumo</h3>
-          <form class="" action="index.html" method="post">
+      <div class="container">
+        <!-- style="background-color: rgb(233, 233, 233);" -->
+        <h3 class="">Calculadora de Consumo</h3>
+        <form class="" action="index.html" method="post">
 
+ 
+          <div class="form-row">
+            <div class="form-group col-md-5">
+              <label>Nome</label>
+              <input id="inputDeviceName" type="text" class="form-control" value="">
+            </div>
+            <div class="form-group col-md-2 ">
+              <label>Quantidade</label>
+              <input id="inputAmountDevices" type="number" class="form-control" value="">
+            </div>
+          </div>
 
-            <div class="form-row">
-              <div class="form-group col-md-5">
-                <label>Nome</label>
-                <input id="inputDeviceName" type="text" class="form-control" value="">
-              </div>
-              <div class="form-group col-md-2 ">
-                <label>Quantidade</label>
-                <input id="inputAmountDevices" type="number" class="form-control" value="">
-              </div>
+          <div class="form-row">
+            <div class="form-group col-md-5">
+              <label>Potência Elétrica</label>
+              <!-- <input id="inputPowerEletric" type="text" class="form-control" value=""> -->
+              <input type="range" class="form-control-range" id="inputPowerEletric">
+              <center><label id="labelPowerEletric"></label></center>
+            </div>
+            <div class="form-group col-md-2">
+              <br>
+              <select id="" class="form-control">
+                <option selected value="">Watts</option>
+                <option value="">KWatts</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-2">
+              <label>Uso médio por dia</label>
+              <input type="text" class="form-control" placeholder="" aria-label="Recipient's username">
             </div>
 
-            <div class="form-row">
-              <div class="form-group col-md-5">
-                <label>Potência Elétrica</label>
-                <!-- <input id="inputPowerEletric" type="text" class="form-control" value=""> -->
-                <input type="range" class="form-control-range" id="inputPowerEletric">
-              </div>
-              <div class="form-group col-md-2">
-                <br>
-                <select id="" class="form-control">
-                  <option selected value="">Watts</option>
-                  <option value="">KWatts</option>
-                </select>
-              </div>
+            <div class="form-group col-md-2">
+              <br>
+              <select name="" id="" class="form-control">
+                <option value="" selected>Horas</option>
+                <option value="">Minutos</option>
+              </select>
             </div>
 
-            <div class="form-row">
-              <div class="form-group col-md-4">
-                <label>Uso médio por dia</label>
-                <div class="input-group">
-                  <input type="text" class="form-control" aria-label="Text input with dropdown button">
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Horas</button>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Horas</a>
-                      <a class="dropdown-item" href="#">Minutos</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                      <div role="separator" class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-
-              <div class="form-group col-md-3">
-                <label>Período de Consumo</label>
-                <input id="inputPeriod" type="text" class="form-control" value="">
-              </div>
+            <div class="form-group col-md-3">
+              <label>Período de Consumo</label>
+              <input id="inputPeriod" type="text" class="form-control" value="">
             </div>
-
-
-            <div class="form-row">
-              <div class="form-group col-md-3">
-                <label>Empresa de Energia</label>
-                <select id="cbLocation" class="form-control" onmousedown="this.value='';"
-                  onchange="calculate(this.value);" ">
-                  <option disabled selected style="display: none;"></option>
-                </select>
-              </div>
-            </div>
-
-          </form>
-
-        </div> <!-- calculator -->
-
-        <div>
-          <div>
-
-            <h2 class="text-center" id=" resultText " style=" display: none "></h2>
 
           </div>
-          <table class=" table table-striped " id=" resultTable " style=" display: none ">
-            <thead>
-              <tr>
-                <th scope=" col "></th>
-                <th scope=" col ">Nome</th>
-                <th scope=" col ">Consumo Elétrico</th>
-                <th scope=" col ">Custo</th>
-              </tr>
-            </thead>
-            <tbody>
 
-            </tbody>
-          </table>
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              <label>Empresa de Energia</label>
+              <select id="cbLocation" class="form-control" onmousedown="this.value='';"
+                onchange="setTarrif(this.value);" ">
+                  <option disabled selected style=" display: none;"></option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              <button type="submit" class="btn btn-primary" onclick="calculate()">Calcular</button>
+            </div>
+          </div>
+
+        </form>
+        <hr>
+      </div> <!-- calculator -->
+
+
+      <div class="container" style="height: 800px; background-color: rgb(230, 230, 230);">
+        <div>
+
+          <h2 class="text-center" id=" resultText"></h2>
+
         </div>
-      </div><!-- results -->
-
-      <div class="container" style="background-color: red;">
+        <table class=" table table-striped" id=" resultTable ">
+          <!-- style=" display: none " -->
+          <thead>
+            <tr>
+              <th scope=" col ">#</th>
+              <th scope=" col ">Nome</th>
+              <th scope=" col ">Consumo Elétrico</th>
+              <th scope=" col ">Custo</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+      <!-- results -->
+      <br>
+      <div class="container" style="height:500px; background-color: red;">
         <h3>About</h3>
       </div><!-- about -->
     </div>
@@ -176,9 +176,16 @@
 
 
     <!-- js -->
-    <script src=" public/js/jquery.js "></script>
-    <script src=" public/js/bootstrap.min.js "></script>
-    <script src=" https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js "></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
     <script src=" main.js "></script>
 </body>
 
