--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <style>
-    html{
+    html {
       scroll-behavior: smooth;
     }
+  
+    footer li {
+      display: inline-block;
+      padding-left: 12px;
+    }
+
     #aboutText p {
       text-align: justify;
     }
@@ -21,6 +27,11 @@
       border: none;
       color: red;
     }
+
+    #githubIcon {
+      width: 22px;
+      height: auto;
+    }
   </style>
 
 </head>
@@ -30,13 +41,12 @@
 
     <div class="container-fluid">
 
-
       <div class="container" style="margin-top: 150px;">
         <header class="masthead mb-auto" style="background-color: white;">
           <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              aria-controls="navbarNav" aria-expanded="false">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -231,56 +241,14 @@
   <!--container-->
 
 
-  <footer class=" container py-5 ">
+  <footer class=" container py-5">
     <div class=" row ">
-      <div class=" col-12 col-md ">
-        <svg xmlns=" http://www.w3.org/2000/svg " width=" 24 " height=" 24 " fill=" none " stroke=" currentColor "
-          stroke-linecap=" round " stroke-linejoin=" round " stroke-width=" 2 " class=" d-block mb-2 " role=" img "
-          viewBox=" 0 0 24 24 " focusable=" false ">
-          <title>Product</title>
-          <circle cx=" 12 " cy=" 12 " r=" 10 "></circle>
-          <path d=" M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74
-                  9.94 ">
-          </path>
-        </svg>
-        <small class=" d-block mb-3 text-muted ">© 2017-2020</small>
-      </div>
       <div class=" col-6 col-md ">
-        <h5>Features</h5>
-        <ul class=" list-unstyled text-small ">
-          <li><a class=" text-muted " href=" # ">Cool stuff</a></li>
-          <li><a class=" text-muted " href=" # ">Random feature</a></li>
-          <li><a class=" text-muted " href=" # ">Team feature</a></li>
-          <li><a class=" text-muted " href=" # ">Stuff for developers</a></li>
-          <li><a class=" text-muted " href=" # ">Another one</a></li>
-          <li><a class=" text-muted " href=" # ">Last time</a></li>
-        </ul>
-      </div>
-      <div class=" col-6 col-md ">
-        <h5>Resources</h5>
-        <ul class=" list-unstyled text-small ">
-          <li><a class=" text-muted " href=" # ">Resource</a></li>
-          <li><a class=" text-muted " href=" # ">Resource name</a></li>
-          <li><a class=" text-muted " href=" # ">Another resource</a></li>
-          <li><a class=" text-muted " href=" # ">Final resource</a></li>
-        </ul>
-      </div>
-      <div class=" col-6 col-md ">
-        <h5>Resources</h5>
-        <ul class=" list-unstyled text-small ">
-          <li><a class=" text-muted " href=" # ">Business</a></li>
-          <li><a class=" text-muted " href=" # ">Education</a></li>
-          <li><a class=" text-muted " href=" # ">Government</a></li>
-          <li><a class=" text-muted " href=" # ">Gaming</a></li>
-        </ul>
-      </div>
-      <div class=" col-6 col-md ">
-        <h5>About</h5>
-        <ul class=" list-unstyled text-small ">
-          <li><a class=" text-muted " href=" # ">Team</a></li>
-          <li><a class=" text-muted " href=" # ">Locations</a></li>
-          <li><a class=" text-muted " href=" # ">Privacy</a></li>
-          <li><a class=" text-muted " href=" # ">Terms</a></li>
+        <ul class=" list-unstyled text-small">
+          <li><a class=" text-muted " href="https://github.com/luizcasula/site-fisica" style="text-decoration:none"><img
+                src="./public/assets/github-icon.png" id="githubIcon"> GitHub</a></li>
+          <li><small class=" d-block mb-3 text-muted ">© 2020</small></li>
+
         </ul>
       </div>
     </div>
