--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 
       <div class="container" style="margin-top: 80px; margin-bottom: 250px;">
         <div style="padding-bottom: 16px;">
-          <h1>Calcule o consumo da sua eletrecidade!</h1>
+          <h1>Calcule seu consumo de eletrecidade!</h1>
         </div>
 
         <form class="main-form needs-validation" novalidate>
           <div class="form-row">
             <div class="form-group col-md-5">
               <label>Nome</label>
-              <input id="inputDeviceName" type="text" class="form-control" value="">
+              <input id="inputDeviceName" type="text" class="form-control" value="" placeholder="Ex: Geladeira">
             </div>
             <div class="form-group col-md-2 ">
               <label>Quantidade</label>
