--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Consumo de Energia</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -245,8 +247,8 @@
     <div class=" row ">
       <div class=" col-6 col-md ">
         <ul class=" list-unstyled text-small">
-          <li><a class=" text-muted " href="https://github.com/luizcasula/consumo-de-energia-brasil" style="text-decoration:none"><img
-                src="./public/assets/github-icon.png" id="githubIcon"> GitHub</a></li>
+          <li><a class=" text-muted " href="https://github.com/luizcasula/consumo-de-energia-brasil"
+              style="text-decoration:none"><img src="./public/assets/github-icon.png" id="githubIcon"> GitHub</a></li>
           <li><small class=" d-block mb-3 text-muted ">© 2020</small></li>
         </ul>
       </div>
